--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Endless possibilities For every business - Flutterwave</title>
   </head>
-  <body class=" flex items-start justify-center w-screen h-screen overflow-x-hidden" >
-    <div class="flex flex-col items-center  justify-center w-[100%] pt-5" id="root"></div>
+  <body class="flex w-screen h-dvh overflow-x-hidden" >
+    <div id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
